--- a/articles/templates/articles/form.html
+++ b/articles/templates/articles/form.html
@@ -1,8 +1,13 @@
 {% extends 'base.html' %}
 {% load django_bootstrap5 %}
 
-{% block body %} 
-<h1>글 수정하기</h1>
+{% block body %}
+
+{% if request.resolver_match.url_name == 'create' %}
+<h1> 글쓰기 </h1>
+{% else %}
+<h1> 수정하기 </h1>
+{% endif %}
 
 <form action="" method="POST">
   {% csrf_token %}
