--- a/pjt/templates/base.html
+++ b/pjt/templates/base.html
@@ -10,6 +10,7 @@
   {% block css %}{% endblock css %}
 </head>
 <body>
+  <h1>{{ user }}</h1>
   <div class="container">
     {% block body %}{% endblock body %}
   </div>
