Update base.html & index.html

--- a/pjt/templates/base.html
+++ b/pjt/templates/base.html
@@ -10,8 +10,8 @@
   {% block css %}{% endblock css %}
 </head>
 <body>
-  <h1>{{ user }}</h1>
-  <div class="container">
+  <p>{{ user }}</p>
+  <div class="container my-5">
     {% block body %}{% endblock body %}
   </div>
   {% bootstrap_javascript %}
