--- a/pjt/templates/base.html
+++ b/pjt/templates/base.html
@@ -10,7 +10,14 @@
   {% block css %}{% endblock css %}
 </head>
 <body>
-  <p>{{ user }}</p>
+  {% if request.user.is_authenticated %}
+    <span>{{ request.user }}</span>
+    <a href="">로그아웃</a>
+  {% else %}
+    <a href="{% url 'accounts:signup' %}">회원가입</a>
+    <a href="{% url 'accounts:login' %}">로그인</a>
+  {% endif %}
+
   <div class="container my-5">
     {% block body %}{% endblock body %}
   </div>
