--- a/pjt/templates/base.html
+++ b/pjt/templates/base.html
@@ -10,15 +10,16 @@
   {% block css %}{% endblock css %}
 </head>
 <body>
-  {% if request.user.is_authenticated %}
-    <span>{{ request.user }}</span>
-    <a href="{% url 'accounts:logout' %}">로그아웃</a>
-  {% else %}
-    <a href="{% url 'accounts:signup' %}">회원가입</a>
-    <a href="{% url 'accounts:login' %}">로그인</a>
-  {% endif %}
-
   <div class="container my-5">
+    <div class="my-3">
+      {% if request.user.is_authenticated %}
+      <span>{{ request.user }}</span>
+      <a href="{% url 'accounts:logout' %}">로그아웃</a>
+      {% else %}
+      <a href="{% url 'accounts:signup' %}">회원가입</a>
+      <a href="{% url 'accounts:login' %}">로그인</a>
+      {% endif %}
+    </div>
     {% block body %}{% endblock body %}
   </div>
   {% bootstrap_javascript %}
