--- a/articles/templates/articles/detail.html
+++ b/articles/templates/articles/detail.html
@@ -4,5 +4,6 @@
 <h1>{{ article.pk }}번 게시글</h1>
 <p>{{ article.created_at|date:"SHORT_DATETIME_FORMAT" }} | {{ article.updated_at|date:"y-m-d D" }}</p>
 <p>{{ article.content }} </p>
+<img src="{{ article.image.url }}" alt="{{ article.image }}">
 <a href="{% url 'articles:update' article.pk %}">수정하기</a>
 {% endblock %}
