--- a/articles/templates/articles/index.html
+++ b/articles/templates/articles/index.html
@@ -7,13 +7,22 @@
 {% endblock %}
 
 {% block body %} 
-<h1>게시판</h1>
+<h1>수업 정리 모아보기</h1>
 {% if request.user.is_authenticated %}
-    <a href="{% url 'articles:create' %}">글 쓰기</a>
+    <a class="btn btn-primary my-3 float-right" href="{% url 'articles:create' %}">글 쓰기</a>
 {% endif %}
-{% for article in articles %}
-<h3><a href="{% url 'articles:detail' article.pk %}">{{ article.title }}</a></h3>
-<p>{{ article.created_at }} | {{ article.updated_at }}</p>
-<hr>
-{% endfor %}
+
+<div class="row">
+  {% for article in articles %}
+  <div class="col-4">
+    <div class="card">
+      <img src="{{ article.image.url }}" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">{{ article.title }}</h5>
+        <a href="{% url 'articles:detail' article.pk %}" class="btn btn-outline-primary my-3">복습하기</a>
+      </div>
+    </div>
+  </div>
+  {% endfor %}
+</div>
 {% endblock %}
