--- a/pjt/templates/base.html
+++ b/pjt/templates/base.html
@@ -40,6 +40,13 @@
       </div>
     </div>
   </nav>
+  {% if messages %}
+    {% for message in messages %}
+      <div class="alert alert-{{ message.tags }}">
+        {{ message }}
+      </div>
+    {% endfor %}
+  {% endif %}
   <div class="container my-5">
     {% block body %}{% endblock body %}
   </div>
