--- a/articles/templates/articles/detail.html
+++ b/articles/templates/articles/detail.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load django_bootstrap5 %}
 
 {% block body %} 
 <h1>{{ article.pk }}번 게시글</h1>
@@ -9,6 +10,11 @@
 {% endif %}
 <a href="{% url 'articles:update' article.pk %}">수정하기</a>
 <h4 class="my-3">댓글</h4>
+<form action="{% url 'articles:comment_create' article.pk %}" method="POST">
+    {% csrf_token %}
+    {% bootstrap_form comment_form layout='inline'%}
+    {% bootstrap_button button_type="submit" content="OK" %}
+</form>
 <hr>
 {% for comment in comments %}
     <p>{{ comment.content }}</p>
