--- a/articles/templates/articles/detail.html
+++ b/articles/templates/articles/detail.html
@@ -10,7 +10,12 @@
 {% if article.image %}
     <img src="{{ article.image.url }}" alt="{{ article.image }}" width="400" height="300">
 {% endif %}
-<a href="{% url 'articles:update' article.pk %}">수정하기</a>
+
+{% if request.user == article.user %}
+<p>
+    <a href="{% url 'articles:update' article.pk %}">수정하기</a>
+</p>
+{% endif %}
 <h4 class="my-3">댓글</h4>
 <form action="{% url 'articles:comment_create' article.pk %}" method="POST">
     {% csrf_token %}
