--- a/articles/templates/articles/detail.html
+++ b/articles/templates/articles/detail.html
@@ -17,14 +17,16 @@
 </p>
 {% endif %}
 <h4 class="my-3">댓글</h4>
+{% if request.user.is_authenticated %}
 <form action="{% url 'articles:comment_create' article.pk %}" method="POST">
     {% csrf_token %}
     {% bootstrap_form comment_form layout='inline'%}
     {% bootstrap_button button_type="submit" content="OK" %}
 </form>
+{% endif %}
 <hr>
 {% for comment in comments %}
-    <p>{{ comment.content }}</p>
+    <p> {{ comment.user.username }} | {{ comment.content }}</p>
     <hr>    
 {% empty %}
     <p>댓글이 없어요 ㅠ_ㅠ</p>
