--- a/articles/templates/articles/index.html
+++ b/articles/templates/articles/index.html
@@ -7,10 +7,13 @@
 {% endblock %}
 
 {% block body %} 
-<h1>수업 정리 모아보기</h1>
-{% if request.user.is_authenticated %}
-    <a class="btn btn-primary my-3 float-right" href="{% url 'articles:create' %}">글 쓰기</a>
-{% endif %}
+
+<div class="header d-flex flex-column justify-content-center align-items-center">
+  <h1 class="fs-1 fw-bolder text-white">질문 게시판</h1>
+  {% if request.user.is_authenticated %}
+  <a class="btn btn-primary my-3 float-right" href="{% url 'articles:create' %}">질문 하기</a>
+  {% endif %}
+</div>
 
 <div class="row">
   {% for article in articles %}
@@ -24,7 +27,7 @@
       <div class="card-body">
         <h5 class="card-title">{{ article.title }}</h5>
         <p class="text-muted"><a href="{% url 'accounts:detail' article.user.pk %}">{{ article.user.username }}</a></p>
-        <a href="{% url 'articles:detail' article.pk %}" class="btn btn-outline-primary my-3">복습하기</a>
+        <a href="{% url 'articles:detail' article.pk %}" class="btn btn-outline-primary my-3">질문 확인</a>
       </div>
     </div>
   </div>
