--- a/pjt/templates/base.html
+++ b/pjt/templates/base.html
@@ -5,14 +5,14 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>KDT | 수업 게시판</title>
   {% bootstrap_css %}
   {% block css %}{% endblock css %}
 </head>
 <body>
   <nav class="navbar navbar-expand-lg bg-primary navbar-dark">
     <div class="container">
-      <a class="navbar-brand" href="#">Navbar</a>
+      <a class="navbar-brand" href="{% url 'main' %}">KDT 1기</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -47,7 +47,7 @@
       </div>
     {% endfor %}
   {% endif %}
-  <div class="container my-5">
+  <div class="container">
     {% block body %}{% endblock body %}
   </div>
   {% bootstrap_javascript %}
