--- a/pjt/templates/base.html
+++ b/pjt/templates/base.html
@@ -1,4 +1,5 @@
 {% load django_bootstrap5 %}
+{% load static %}
 <!DOCTYPE html>
 <html lang="ko">
 <head>
@@ -6,8 +7,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>KDT | 수업 게시판</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
   {% bootstrap_css %}
   {% block css %}{% endblock css %}
+  <link rel="stylesheet" href="{% static 'css/style.css' %}">
+
 </head>
 <body>
   <nav class="navbar navbar-expand-lg bg-primary navbar-dark">
