--- a/accounts/templates/accounts/detail.html
+++ b/accounts/templates/accounts/detail.html
@@ -24,5 +24,15 @@
         </p>
         {% endfor %}
     </div>
+    <div class="col-6">
+        <h3>좋아요 누른 글</h3>
+        <p class="text-muted">{{ user.like_articles.count }}개를 작성하였습니다.</p>
+        {% for article in user.like_articles.all %}
+        <p>
+            {{ forloop.counter }}
+            <a href="{% url 'articles:detail' article.pk %}">{{ article.title }}</a>
+        </p>
+        {% endfor %}
+    </div>
 </div>
 {% endblock body %}
