--- a/articles/templates/articles/detail.html
+++ b/articles/templates/articles/detail.html
@@ -12,8 +12,10 @@
     <i class="bi bi-heart-fill"></i>
   {% else %}
     <i class="bi bi-heart"></i>
-  {% endif %}</a>{{ article.like_users.count }}</span>
+  {% endif %}</a>
 {% endif %}
+{{ article.like_users.count }}</span>
+
 {% if request.user == article.user %}
 <p>
   <a href="{% url 'articles:update' article.pk %}">수정하기</a>
