--- a/articles/templates/articles/detail.html
+++ b/articles/templates/articles/detail.html
@@ -27,19 +27,21 @@
 <hr>
 <h4 class="my-3">댓글</h4>
 {% if request.user.is_authenticated %}
-<form action="{% url 'articles:comment_create' article.pk %}" method="POST">
+<form id="comment-form" data-article-id="{{ article.pk }}">
   {% csrf_token %}
   {% bootstrap_form comment_form layout='floating'%}
   {% bootstrap_button button_type="submit" content="OK" %}
 </form>
 {% endif %}
 <hr>
+<div id="comments">
 {% for comment in comments %}
   <p> {{ comment.user.username }} | {{ comment.content }}</p>
   <hr>    
 {% empty %}
   <p>댓글이 없어요 ㅠ_ㅠ</p>
 {% endfor %}
+</div>
 
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 <script>
@@ -70,4 +72,31 @@
     })
   })
 </script>
+<script>
+  // 댓글!
+  // (1) 댓글 폼
+  const commentForm = document.querySelector('#comment-form')
+  // (2) 제출하면, 함수 실행시킬래 
+  // csrf 
+  const csrftoken = document.querySelector('[name=csrfmiddlewaretoken]').value
+  commentForm.addEventListener('submit', function(event) {
+    event.preventDefault();
+    axios({
+      method: 'post',
+      url: `/articles/${event.target.dataset.articleId}/comments/`,
+      headers: {'X-CSRFToken': csrftoken},
+      data: new FormData(commentForm) // 폼에 있는 정보를 data로 넘겨줄 수 있도록 변환
+    })
+    .then(response => {
+      console.log(response.data)
+      // 댓글을 추가하는 로직
+      const comments = document.querySelector('#comments')
+      const p = document.createElement('p')
+      p.innerText = `${response.data.userName} | ${response.data.content}`
+      const hr = document.createElement('hr')
+      comments.append(p, hr) 
+      commentForm.reset()
+    })
+  })
+</script> 
 {% endblock %}
